Kubernetes/longhorn/longhorn-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-test-pod
spec:
  containers:
  - name: test-container
    image: nginx
    volumeMounts:
    - name: storage-volume
      mountPath: /data
    ports:
    - containerPort: 80
  volumes:
  - name: storage-volume
    persistentVolumeClaim:
      claimName: longhorn-test-pvc
